--- a/model_io/tests/CMakeLists.txt
+++ b/model_io/tests/CMakeLists.txt
@@ -1,5 +1,3 @@
-find_package(kdl_codyco REQUIRED)
-
 if(ENABLE_IKIN)
 find_package(YARP REQUIRED)
 find_package(ICUB REQUIRED)
@@ -9,12 +7,12 @@ include_directories(${Orocos-KDL_INCLUDE_DIRS} ${kdl_codyco_INCLUDE_DIRS} )
 
 add_executable(check_urdf_import_export check_urdf_import_export.cpp)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/format_examples/urdf/black_icub.urdf ${CMAKE_CURRENT_BINARY_DIR}/black_icub.urdf)
-target_link_libraries(check_urdf_import_export ${kdl_codyco_LIBRARIES} kdl-format-io)
+target_link_libraries(check_urdf_import_export ${orocos_kdl_LIBRARIES} idyntree-core idyntree-model-io)
 add_test(test_urdf_import_export check_urdf_import_export black_icub.urdf)
 
 add_executable(check_symoro_par_import_fixed_chain_regressor check_symoro_par_import_fixed_chain_regressor.cpp)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/format_examples/symoro_par/fake_puma.par ${CMAKE_CURRENT_BINARY_DIR}/fake_puma.par)
-target_link_libraries(check_symoro_par_import_fixed_chain_regressor ${kdl_codyco_LIBRARIES} kdl-format-io)
+target_link_libraries(check_symoro_par_import_fixed_chain_regressor  ${orocos_kdl_LIBRARIES} idyntree-core idyntree-model-io)
 add_test(test_par_import_fixed_chain_regressor check_symoro_par_import_fixed_chain_regressor fake_puma.par)
 
 
@@ -27,7 +25,7 @@ add_test(test_par_import_fixed_chain_regressor check_symoro_par_import_fixed_cha
 IF(CMAKE_BUILD_TYPE MATCHES Debug)
     add_executable(check_symoro_par_import_floating_tree_regressor check_symoro_par_import_floating_tree_base_regressor.cpp)
     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/format_examples/symoro_par/HRP2JRL_IMU.par ${CMAKE_CURRENT_BINARY_DIR}/HRP2JRL_IMU.par)
-    target_link_libraries(check_symoro_par_import_floating_tree_regressor ${kdl_codyco_LIBRARIES} kdl-format-io)
+    target_link_libraries(check_symoro_par_import_floating_tree_regressor  ${orocos_kdl_LIBRARIES} idyntree-core idyntree-model-io)
     add_test(test_par_import_floating_tree_regressor check_symoro_par_import_floating_tree_regressor HRP2JRL_IMU.par)
 ENDIF()
 
