[travis] add orocos_kdl to the compiled dependecies

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ before_script:
   - make urdfdom
   - make YARP
   - make ICUB
+  - make orocos_kdl
   - pwd
   - cd ../..
   # deal with TinyXML linking problems
