--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
 install:
   - sudo sh -c 'echo "deb http://www.icub.org/ubuntu precise contrib/science" > /etc/apt/sources.list.d/icub.list'
   - sudo add-apt-repository -y ppa:kalakris/cmake
+  - sudo add-apt-repository -y ppa:kubuntu-ppa/backports 
   - sudo apt-get update
   - sudo apt-get install -qq libeigen3-dev libboost-system-dev libboost-thread-dev libboost-test-dev
   - sudo apt-get --force-yes install icub-common
