--- a/.travis.yml
+++ b/.travis.yml
@@ -9,20 +9,15 @@ env:
   - TRAVIS_BUILD_TYPE=Debug, TRAVIS_CMAKE_GENERATOR="Unix Makefiles", CMAKE_PREFIX_PATH="/home/travis/build/robotology-playground/codyco-superbuild/build/install"
   - TRAVIS_BUILD_TYPE=Release, TRAVIS_CMAKE_GENERATOR="Unix Makefiles", CMAKE_PREFIX_PATH="/home/travis/build/robotology-playground/codyco-superbuild/build/install"
 
-install:
-  - sudo sh -c 'echo "deb http://www.icub.org/ubuntu precise contrib/science" > /etc/apt/sources.list.d/icub.list'
-  - sudo add-apt-repository -y ppa:kalakris/cmake
-  - sudo apt-get update
-  - sudo apt-get install -qq libeigen3-dev libboost-system-dev libboost-thread-dev libboost-test-dev
-  - sudo apt-get --force-yes install icub-common
-  - sudo apt-get install cmake
-
 before_script:
   - cmake --version
   - cd ..
   # use superbuild for getting iDynTree dependencies 
   - git clone https://github.com/robotology/codyco-superbuild
   - cd codyco-superbuild
+  # install dependencies using the codyco-superbuild script
+  - chmod +x ./.ci/travis-deps.sh
+  - sh .ci/travis-deps.sh
   - mkdir build
   - cd build
   # using the YCM_EP_MAINTAINER_MODE variable to enable the subproject-dependees target 
