--- a/model_io/CMakeLists.txt
+++ b/model_io/CMakeLists.txt
@@ -131,6 +131,8 @@ endif()
 set_property(GLOBAL APPEND PROPERTY IDYNTREE_TREE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
 get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
 
+include_directories(${IDYNTREE_TREE_INCLUDE_DIRS})
+
 
 option(ENABLE_IKIN "Enable support for exporting iKin chains" FALSE)
 
