--- a/yarp/tests/CMakeLists.txt
+++ b/yarp/tests/CMakeLists.txt
@@ -1,7 +1,13 @@
 
 
 find_package(TinyXML       REQUIRED)
-include_directories(${CMAKE_SOURCE_DIR}/include ${EIGEN3_INCLUDE_DIR} ${orocos_kdl_INCLUDE_DIRS} ${iDynTree_INCLUDE_DIRS} ${kdl_codyco_INCLUDE_DIRS})
+include_directories(${CMAKE_SOURCE_DIR}/include
+                          ${EIGEN3_INCLUDE_DIR}
+                          ${orocos_kdl_INCLUDE_DIRS}
+                          ${iDynTree_INCLUDE_DIRS}
+                          ${YARP_INCLUDE_DIRS}
+                          ${kdl_codyco_INCLUDE_DIRS}
+                          ${ICUB_INCLUDE_DIRS})
 
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/test_files/icub.urdf
@@ -10,23 +16,24 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/test_files/bigman.urdf
                ${CMAKE_CURRENT_BINARY_DIR}/bigman.urdf)
 add_executable(iDynTreeJacobianTest         iDynTreeJacobianTest.cpp)
 add_executable(iDynTreeRelativeJacobianTest iDynTreeRelativeJacobianTest.cpp)
-#add_executable(iDynTreeWholeBodyFTsensorEstimateTest iDynTreeWholeBodyFTsensorEstimateTest.cpp)
-#add_executable(iDynTreeExternalWrenchesEstimationTest iDynTreeExternalWrenchesEstimationTest.cpp)
+add_executable(iDynTreeWholeBodyFTsensorEstimateTest iDynTreeWholeBodyFTsensorEstimateTest.cpp)
+add_executable(iDynTreeExportFixedJointsFrames iDynTreeExportFixedJointsFrames.cpp)
+add_executable(iDynTreeExternalWrenchesEstimationTest iDynTreeExternalWrenchesEstimationTest.cpp)
+
 #add_executable(iDynTreeCOM iDynTreeCOM.cpp)
 
 
 target_link_libraries(iDynTreeJacobianTest ${ICUB_LIBRARIES} idyntree-yarp)
 target_link_libraries(iDynTreeRelativeJacobianTest ${ICUB_LIBRARIES} idyntree-yarp)
-
-#target_link_libraries(iDynTreeWholeBodyFTsensorEstimateTest iDynTree ${ICUB_LIBRARIES} ${orocos_kdl_LIBRARIES} {kdl_codyco_LIBRARIES})
-#target_link_libraries(iDynTreeExternalWrenchesEstimationTest idyntree ${ICUB_LIBRARIES} ${orocos_kdl_LIBRARIES} ${kdl_codyco_LIBRARIES} )
+target_link_libraries(iDynTreeWholeBodyFTsensorEstimateTest ${ICUB_LIBRARIES} ${orocos_kdl_LIBRARIES} idyntree-yarp)
+target_link_libraries(iDynTreeExportFixedJointsFrames ${ICUB_LIBRARIES} ${orocos_kdl_LIBRARIES} idyntree-yarp)
+target_link_libraries(iDynTreeExternalWrenchesEstimationTest idyntree-yarp ${ICUB_LIBRARIES} ${orocos_kdl_LIBRARIES} ${kdl_codyco_LIBRARIES} )
 #target_link_libraries(iDynTreeCOM idyntree ${ICUB_LIBRARIES} ${kdl_codyco_LIBRARIES} )
 
 add_test(NAME test_iDynTreeJacobianTest                COMMAND iDynTreeJacobianTest         icub.urdf)
 add_test(NAME test_iDynTreeRelativeJacobianTest        COMMAND iDynTreeRelativeJacobianTest icub.urdf imu_frame)
 add_test(NAME test_iDynTreeRelativeJacobianTest_bigman COMMAND iDynTreeRelativeJacobianTest bigman.urdf imu_link)
-
-
-#add_test(NAME test_iDynTreeWholeBodyFTsensorEstimateTest COMMAND iDynTreeWholeBodyFTsensorEstimateTest)
-#add_test(NAME test_iDynTreeExternalWrenchesEstimationTest COMMAND iDynTreeExternalWrenchesEstimationTest)
+add_test(NAME test_iDynTreeWholeBodyFTsensorEstimateTest COMMAND iDynTreeWholeBodyFTsensorEstimateTest)
+add_test(NAME test_iDynTreeExportFixedJointsFrames     COMMAND iDynTreeExportFixedJointsFrames)
+add_test(NAME test_iDynTreeExternalWrenchesEstimationTest COMMAND iDynTreeExternalWrenchesEstimationTest)
 
