Fixed CMake in yarp component

--- a/yarp/CMakeLists.txt
+++ b/yarp/CMakeLists.txt
@@ -24,6 +24,7 @@ set_property(GLOBAL APPEND PROPERTY IDYNTREE_TREE_INCLUDE_DIRS "${PROJECT_SOURCE
 get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
 
 include_directories(${IDYNTREE_TREE_INCLUDE_DIRS})
+include_directories(${orocos_kdl_INCLUDE_DIRS})
 
 include(AddInstallRPATHSupport)
 add_install_rpath_support(BIN_DIRS "${CMAKE_INSTALL_PREFIX}/bin"
