--- a/regressors/CMakeLists.txt
+++ b/regressors/CMakeLists.txt
@@ -8,32 +8,34 @@ if(MSVC)
     set(CMAKE_DEBUG_POSTFIX "d")
 endif(MSVC)
 
-include_directories(include ${orocos_kdl_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR})
-include_directories(${IDYNTREE_TREE_INCLUDE_DIRS})
+include_directories(include/kdl_codyco/regressors)
 
-file(GLOB IDYNTREE_REGRESSORS_HDRS
+file(GLOB IDYNTREE_REGRESSORS_HEADERS
      "include/kdl_codyco/regressors/*.hpp"
  )
 
 # TODO \todo : avoid globbing and explicitly state everithing
 
-file(GLOB  IDYNTREE_REGRESSORS_SRC
+file(GLOB IDYNTREE_REGRESSORS_SOURCES
     "src/*.cpp"
 )
 
+SOURCE_GROUP("Source Files" FILES ${IDYNTREE_REGRESSORS_SOURCES})
+SOURCE_GROUP("Header Files" FILES ${IDYNTREE_REGRESSORS_HEADERS})
 
-SOURCE_GROUP("Source Files" FILES ${IDYNTREE_REGRESSORS_SRC})
-SOURCE_GROUP("Header Files" FILES ${IDYNTREE_REGRESSORS_HDRS})
+#include other iDynTree headers as system
+get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
+
+include_directories(SYSTEM ${IDYNTREE_TREE_INCLUDE_DIRS})
 
 # share headers with all iDynTree targes
 set_property(GLOBAL APPEND PROPERTY IDYNTREE_TREE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
-get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
+include_directories(SYSTEM ${orocos_kdl_INCLUDE_DIRS} 
+                           ${EIGEN3_INCLUDE_DIR})
 
-include_directories(${IDYNTREE_TREE_INCLUDE_DIRS})
 include(YCMDefaultDirs)
 
-
-add_library(idyntree-regressors ${IDYNTREE_REGRESSORS_SRC} ${IDYNTREE_REGRESSORS_HDRS})
+add_library(idyntree-regressors ${IDYNTREE_REGRESSORS_SOURCES} ${IDYNTREE_REGRESSORS_HEADERS})
 
 target_include_directories(idyntree-regressors PUBLIC "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>"
                                                 "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${${VARS_PREFIX}_INSTALL_INCLUDEDIR}>")
@@ -45,7 +47,7 @@ set_target_properties(idyntree-regressors PROPERTIES
   VERSION "${KDL_CODYCO_VERSION}"
   COMPILE_FLAGS "${CMAKE_CXX_FLAGS_ADD}")
 
-set_property(TARGET idyntree-regressors PROPERTY PUBLIC_HEADER ${IDYNTREE_REGRESSORS_HDRS})
+set_property(TARGET idyntree-regressors PROPERTY PUBLIC_HEADER ${IDYNTREE_REGRESSORS_HEADERS})
 
 install(TARGETS idyntree-regressors
         EXPORT iDynTree
