--- a/iDynTreeConfig.cmake.in
+++ b/iDynTreeConfig.cmake.in
@@ -28,4 +28,4 @@ endif()
 
 # Compatibility
 set(iDynTree_LIBRARIES iDynTree::idyntree-core;iDynTree::idyntree-regressors;iDynTree::idyntree-model-io;iDynTree::idyntree-yarp)
-set(iDynTree_INCLUDE_DIRS ${iDynTree_INCLUDEDIR} "@EIGEN3_INCLUDE_DIR@")
+set(iDynTree_INCLUDE_DIRS ${iDynTree_INCLUDEDIR} "@EIGEN3_INCLUDE_DIR@" "@Boost_INCLUDE_DIRS@")
