--- a/model_io/tests/CMakeLists.txt
+++ b/model_io/tests/CMakeLists.txt
@@ -33,6 +33,6 @@ endif()
 IF(CMAKE_BUILD_TYPE MATCHES Debug)
     add_executable(check_symoro_par_import_floating_tree_regressor check_symoro_par_import_floating_tree_base_regressor.cpp)
     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/format_examples/symoro_par/HRP2JRL_IMU.par ${CMAKE_CURRENT_BINARY_DIR}/HRP2JRL_IMU.par)
-    target_link_libraries(check_symoro_par_import_floating_tree_regressor idyntree-core idyntree-model-io ${orocos_kdl_LIBRARIES})
+    target_link_libraries(check_symoro_par_import_floating_tree_regressor idyntree-core idyntree-regressors idyntree-model-io ${orocos_kdl_LIBRARIES})
     add_test(NAME test_par_import_floating_tree_regressor COMMAND check_symoro_par_import_floating_tree_regressor HRP2JRL_IMU.par)
 ENDIF()
