--- a/yarp/tests/CMakeLists.txt
+++ b/yarp/tests/CMakeLists.txt
@@ -14,6 +14,8 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/test_files/icub.urdf
                ${CMAKE_CURRENT_BINARY_DIR}/icub.urdf)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/test_files/bigman.urdf
                ${CMAKE_CURRENT_BINARY_DIR}/bigman.urdf)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/test_files/icub_model.urdf
+               ${CMAKE_CURRENT_BINARY_DIR}/icub_model.urdf)
 add_executable(iDynTreeJacobianTest         iDynTreeJacobianTest.cpp)
 add_executable(iDynTreeRelativeJacobianTest iDynTreeRelativeJacobianTest.cpp)
 add_executable(iDynTreeWholeBodyFTsensorEstimateTest iDynTreeWholeBodyFTsensorEstimateTest.cpp)
@@ -37,3 +39,6 @@ add_test(NAME test_iDynTreeWholeBodyFTsensorEstimateTest COMMAND iDynTreeWholeBo
 add_test(NAME test_iDynTreeExportFixedJointsFrames     COMMAND iDynTreeExportFixedJointsFrames)
 add_test(NAME test_iDynTreeExternalWrenchesEstimationTest COMMAND iDynTreeExternalWrenchesEstimationTest)
 
+add_executable(iCubLeftArmRegressorTest iCubLeftArmRegressorTest.cpp)
+target_link_libraries(iCubLeftArmRegressorTest idyntree-regressors idyntree-model-io)
+add_test(NAME test_iCubLeftArmRegressorTest COMMAND iCubLeftArmRegressorTest )
