first tutorial for fixed base torque inertial parameter regressors

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -8,3 +8,4 @@ cmake_minimum_required(VERSION 2.8.11)
 project("iDynTree_Examples")
 
 add_subdirectory(icubArmRegressor)
+add_subdirectory(walkmanLimbJTSRegressor)
