--- a/bindings/matlab/CMakeLists.txt
+++ b/bindings/matlab/CMakeLists.txt
@@ -1,7 +1,7 @@
 # As matlab support is higly experimental for now in swig, we split the binding generation in two phases:
 #  * Generation of the .cxx code, left to the author of the library that needs to have a recent (non-standard) swig
-#  * Compilation of the .cxx, that is left to the user that compiles the library. 
-# For doing this we split the traditional swig_add_module macro in two macro: one for generating the wrapper and one 
+#  * Compilation of the .cxx, that is left to the user that compiles the library.
+# For doing this we split the traditional swig_add_module macro in two macro: one for generating the wrapper and one
 # for compiling it. As soon as upstream swig distributed by the distro gains Matlab support, we can drop this workaround
 macro(SWIG_GENERATE_MODULE name language)
   SWIG_MODULE_INITIALIZE(${name} ${language})
@@ -41,13 +41,17 @@ set(modulename iDynTreeMATLAB_wrap)
 # Generate SWIG wrapper
 if(GENERATE_MATLAB)
   # generate the wrapper
+  set(swig_generated_sources)
+  message("swig_generated_sources " ${swig_generated_sources})
+  set_source_files_properties(../iDynTree.i PROPERTIES CPLUSPLUS ON)
   swig_generate_module(${modulename} matlab ../iDynTree.i)
-  # copy generate files in source directory 
+  message("swig_generated_sources " ${swig_generated_sources})
+  # copy generate files in source directory
   configure_file(${CMAKE_CURRENT_BINARY_DIR}/../${modulename}.cxx ${CMAKE_CURRENT_SOURCE_DIR}/${modulename}.cxx)
   configure_file(${CMAKE_CURRENT_BINARY_DIR}/../SwigRef.m ${CMAKE_CURRENT_SOURCE_DIR}/SwigRef.m)
   file(COPY ${CMAKE_CURRENT_BINARY_DIR}/../+iDynTree DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/)
 endif()
-  
+
 # use previously generated files
 set(swig_generated_sources ${CMAKE_CURRENT_SOURCE_DIR}/${modulename}.cxx)
 set(swig_other_sources)
